--- a/app/src/main/res/layout/activity_show_perticular_bill.xml
+++ b/app/src/main/res/layout/activity_show_perticular_bill.xml
@@ -79,10 +79,10 @@
 
                         <TextView
                             android:id="@+id/tvNo"
+                            android:visibility="gone"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="0.5"
+                            android:layout_marginStart="10dp"
                             android:text="No."
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -94,8 +94,8 @@
                             android:id="@+id/tvProductName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="2"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1.5"
                             android:text="Product Name"
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -107,8 +107,8 @@
                             android:id="@+id/tvWeight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="0.7"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
                             android:text="Wt."
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -120,8 +120,8 @@
                             android:id="@+id/tvRate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="1"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1.3"
                             android:text="Rate"
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -133,8 +133,8 @@
                             android:id="@+id/tvQty"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="0.8"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1"
                             android:text="Qty."
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -146,8 +146,8 @@
                             android:id="@+id/tvAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="20dp"
-                            android:layout_weight="1"
+                            android:layout_marginStart="10dp"
+                            android:layout_weight="1.2"
                             android:text="Amt."
                             android:textColor="@color/white"
                             android:textSize="12sp"
