--- a/app/src/main/res/layout/item_perticular_bill_data.xml
+++ b/app/src/main/res/layout/item_perticular_bill_data.xml
@@ -20,12 +20,12 @@
             android:id="@+id/tvsetNo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_weight="1"
+            android:layout_marginStart="10dp"
             android:text="->"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvmobilenumber" />
 
@@ -34,8 +34,10 @@
             android:id="@+id/tvsetProductName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="0dp"
             android:layout_weight="1.5"
+            android:ellipsize="none"
+            android:maxLines="3"
             android:text="Product Name"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -47,8 +49,8 @@
             android:id="@+id/tvsetWeight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_weight="0.7"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
             android:text="Wt."
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -60,8 +62,8 @@
             android:id="@+id/tvsetRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1.3"
             android:text="Rate"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -73,8 +75,8 @@
             android:id="@+id/tvsetQty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_weight="0.8"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
             android:text="Qty."
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -86,8 +88,8 @@
             android:id="@+id/tvsetAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_weight="1"
+            android:layout_marginStart="10dp"
+            android:layout_weight="1.2"
             android:text="Amt."
             android:textColor="@color/white"
             android:textSize="12sp"
